# LitePy

./: .env  .gitignore  .pydoc-markdown.yml  CODE_OF_CONDUCT.md  LICENSE.txt  README.md  SECURITY.md  db_1.sqlite-shm  db_1.sqlite-wal  db_2.sqlite-shm  db_2.sqlite-wal  path_finding_tests.py  postgres_test.py  pyproject.toml  pytest.sqlite  readme.md  requirements.txt  scratch.db  scratchpad.py  setup.cfg  setup.py  test.sqlite-shm  test.sqlite-wal  tests_database.db
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: workflow.yml
docs/: getting_started.md  installation.md  introduction.md
docs/api_reference/: pylite.lite.md  pylite.lite_collection.md  pylite.lite_connection.md  pylite.lite_exceptions.md  pylite.lite_model.md  pylite.lite_query.md  pylite.lite_table.md  pylite.md
lite/: __init__.py  lite.py  lite_model.py  lite_table.py  litecollection.py  liteconnection.py  liteexceptions.py  litemodel.py  litequery.py  liteserver.py  litetable.py
lite.egg-info/: PKG-INFO  SOURCES.txt
pylite/: __init__.py  lite.py  lite_collection.py  lite_connection.py  lite_exceptions.py  lite_model.py  lite_query.py  lite_table.py
relationship_tests/: about.md
tests/: __init__.py  __litequery.py  about.md  example_models.py  litetable_test.py  models_test.py  test_lite.py  test_lite_collection.py  test_lite_model.py  test_lite_query.py  test_lite_table.py  test_litecollection.py  test_liteconnection.py  test_litemodel.py  test_litequery.py  test_litetable.py
tests/performance_tests/: litetable_perf_test.py  litetable_test.py
(+9 files in other folders)
