[project]
name = "pylite"
version = "0.0.1"
requires-python = ">=3.9"
description = "An SQLite ORM for Python, inspired by Laravel's Eloquent."
authors = [
    {name = "Ben Moore", email = "ben@benhmoore.com"}
]
license = {file = "LICENSE.txt"}
readme = "README.md"

dependencies = ["colorama", "inflect"]
classifiers = [
    "Programming Language :: Python :: 3.9"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"